--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Moviefy</title>
   
   <!-- Google Fonts for Anton, Barlow, and Bebas Neue -->
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Barlow:wght@400;700&family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Barlow:wght@400;700&family=Bebas+Neue&family=Russo+One&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Web Font Loader Script -->
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
@@ -23,7 +23,7 @@
   </div>
 
   <div class="app-container" id="posterApp" style="display: none;">
-    <canvas id="posterCanvas" width="1080" height="1920"></canvas>
+    <canvas id="posterCanvas" style="display: none;" width="1080" height="1920"></canvas>
     <div class="button-group">
       <button id="downloadBtn" style="display: none;">⬇️ Download</button>
       <button id="shareBtn" style="display: none;">📲 Share to Story</button>
@@ -32,13 +32,13 @@
 
   <script type="module" src="js/main.js"></script>
   <script type="module">
-    // Ensure fonts are loaded before rendering the canvas
+    // Load fonts before rendering the canvas
     WebFont.load({
       google: {
-        families: ['Anton', 'Barlow:400,700', 'Bebas Neue']
+        families: ['Anton', 'Barlow:400,700', 'Bebas Neue', 'Russo One', 'Cormorant Garamond']
       },
       active: function() {
-        // Fonts are loaded, now you can render the poster or initialize the canvas
+        
         document.getElementById('loginScreen').style.display = 'block'; // Show the login screen
       },
       inactive: function() {
