--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
       <a href="index.html">Home</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="#contact">Contact</a>
-      <a href="#how">How It Works</a>
+      <a href="how-it-works.html">How It Works</a>
     </nav>
   </div>
 </header>
