--- a/how-it-works.html
+++ b/how-it-works.html
@@ -63,10 +63,10 @@
     <p>We use Spotify’s official login to access your top artists and tracks. This uses secure OAuth — we don’t see your password.</p>
 
     <h2>Step 2: Generate Your Poster</h2>
-    <p>Once logged in, your data is transformed into a high-res vertical movie poster, ready to download or share.</p>
+    <p>Once logged in, your data is transformed into a high-res vertical movie poster.</p>
 
-    <h2>Step 3: Customize and Save</h2>
-    <p>Choose your background, then download or share your story-ready poster. It’s designed to look good on Instagram, too.</p>
+    <h2>Step 3: Share </h2>
+    <p>Download or share your story-ready poster. It’s designed to look good on Instagram, too.</p>
 
     <h2>Photo Credits</h2>
     <p>Backgrounds come from <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a>. View full <a href="photo-credits.html">photo credits</a>.</p>
