Playlist focused, poster changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Moviefy</title>
   
-  <!-- Google Fonts for Anton, Barlow, and Bebas Neue -->
+  <!-- Google Fonts for Anton, Barlow, and Bebas Neue, etc-->
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Barlow:wght@400;700&family=Bebas+Neue&family=Russo+One&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Web Font Loader Script -->
@@ -22,18 +22,6 @@
       document.getElementById('header').innerHTML = html;
     });
 </script>
-
-  <!-- <div class="login-container" id="loginScreen"> -->
-    <!-- <div class="login-card"> -->
-      <!-- <p class="tagline-bold">Your music taste, reimagined as a movie.</p> -->
-	  <!-- <p class="tagline-sub">Turn your listening into a cinematic poster.</p> -->
-      <!-- <button id="loginBtn">🎧 Login with Spotify</button> -->
-	  <!-- <p class="privacy-note"> -->
-    <!-- By logging in, you agree to our <a href="privacy.html" target="_blank">Privacy Policy</a> and  -->
-    <!-- Spotify’s <a href="https://www.spotify.com/legal/privacy-policy/" target="_blank">Privacy Policy</a>. -->
-  <!-- </p> -->
-    <!-- </div> -->
-  <!-- </div> -->
   <div class="login-screen" id="loginScreen">
   <p class="tagline-bold">Your music taste, reimagined<br>as a movie</p>
   <p class="tagline-sub">Turn your listening into a cinematic poster</p>
