--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Moviefy</title>
   
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  
   <!-- Google Fonts for Anton, Barlow, and Bebas Neue, etc-->
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Barlow:wght@400;700&family=Bebas+Neue&family=Russo+One&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 
@@ -41,7 +45,7 @@
     </div>
   </div>
 
-  <script type="module" src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
   <script type="module">
     // Load fonts before rendering the canvas
     WebFont.load({
