New poster pics, updated sharing on instagram

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
     <nav class="menu">
       <a href="index.html">Home</a>
       <a href="privacy.html">Privacy Policy</a>
-      <a href="#contact">Contact</a>
+      <!---<a href="#contact">Contact</a>-->
       <a href="how-it-works.html">How It Works</a>
     </nav>
   </div>
