--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
       <button id="shareBtn" style="display: none;">Share to Story</button>
     </div>
   </div>
+  
+  <div class="poster-share-wrapper" id="sharePreview" style="display: none;">
+    <div class="poster-border">
+      <canvas id="posterCanvas" width="1080" height="1920"></canvas>
+    </div>
+    <div class="moviefy-branding">
+      MOVIEFY
+    </div>
+  </div>
+
 
 <script type="module" src="js/main.js"></script>
   <script type="module">
