--- a/privacy.html
+++ b/privacy.html
@@ -40,7 +40,7 @@
     <p>We do <strong>not collect, store, or share</strong> any of your personal data.</p>
     <p>You can revoke access at any time via your <a href="https://www.spotify.com/account/apps/" target="_blank">Spotify App Permissions</a> page.</p>
     <p>This app follows the <a href="https://developer.spotify.com/terms/" target="_blank">Spotify Developer Terms of Service</a> and respects your privacy.</p>
-    <p>If you have any questions, please contact the developer.</p>
+    <p>If you have any questions, please contact the <a href="https://github.com/webhistories" target="_blank"> developer. </a> </p>
   </div>
 </body>
 </html>
