--- a/index.html
+++ b/index.html
@@ -41,19 +41,9 @@
     <canvas id="posterCanvas" style="display: none;" width="1080" height="1920"></canvas>
     <div class="button-group">
       <button id="downloadBtn" style="display: none;">Download</button>
-      <button id="shareBtn" style="display: none;">Share to Story</button>
+      <button id="newTabBtn" style="display: none;">Open in New Tab</button>
     </div>
   </div>
-  
-  <div class="poster-share-wrapper" id="sharePreview" style="display: none;">
-    <div class="poster-border">
-      <canvas id="posterCanvas" width="1080" height="1920"></canvas>
-    </div>
-    <div class="moviefy-branding">
-      MOVIEFY
-    </div>
-  </div>
-
 
 <script type="module" src="js/main.js"></script>
   <script type="module">
