--- a/privacy.html
+++ b/privacy.html
@@ -10,20 +10,32 @@
   <style>
     .privacy-content {
       max-width: 700px;
-      margin: 80px auto 40px;
-      padding: 20px;
+      margin: 6rem auto 3rem;
+      padding: 2rem;
       line-height: 1.6;
       color: #333;
+      background: #fff;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      border-radius: 12px;
       font-family: 'Barlow', sans-serif;
     }
+
     .privacy-content h1 {
-      font-size: 2em;
-      margin-bottom: 0.5em;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #0f0e45;
     }
+
     .privacy-content a {
-      color: #007bff;
+      color: #0f0e45;
+      text-decoration: none;
+    }
+
+    .privacy-content a:hover {
+      text-decoration: underline;
     }
   </style>
+
 </head>
 <body>
 <div id="header"></div>
